--- a/CardsPlus/style.css
+++ b/CardsPlus/style.css
@@ -22,15 +22,10 @@
 }
 
 body {
-  background-image: url(img/bg.jpg);
+  background-image: url(../img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-.charPic {
-  background-size: 100% 100%;
-  height: 100px;
 }
 
 .glass {
@@ -38,6 +33,55 @@ body {
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(2px);
   border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.creator img {
+  height: 40px;
+  border-radius: 20px;
+}
+
+.creator {
+  margin-bottom: 10px;
+}
+
+.creator div {
+  display: inline-block;
+  font-weight: bold;
+  margin-left: 5px;
+  font-size: 15px;
+}
+
+.navBar {
+  height: 40px;
+  position: fixed;
+  z-index: 2;
+}
+
+.navBar .site_Logo img,
+.navBar .site_Logo {
+  height: 40px;
+}
+
+.navBar ul li i,
+.navBar ul li {
+  height: 40px;
+  line-height: 40px;
+  font-size: 18px;
+  width: 50px;
+  text-align: center;
+}
+
+.navBar li.active {
+  background-color: #424242;
+}
+
+.pageAlign {
+  margin-top: 50px !important;
+}
+
+.charPic {
+  background-size: 100% 100%;
+  height: 100px;
 }
 
 .vision {
@@ -49,31 +93,31 @@ body {
 }
 
 .HydroVision {
-  background-image: url(img/Hydro.png);
+  background-image: url(../img/Hydro.png);
 }
 
 .ElectroVision {
-  background-image: url(img/Electro.png);
+  background-image: url(../img/Electro.png);
 }
 
 .PyroVision {
-  background-image: url(img/Pyro.png);
+  background-image: url(../img/Pyro.png);
 }
 
 .CryoVision {
-  background-image: url(img/Cryo.png);
+  background-image: url(../img/Cryo.png);
 }
 
 .AnemoVision {
-  background-image: url(img/Anemo.png);
+  background-image: url(../img/Anemo.png);
 }
 
 .GeoVision {
-  background-image: url(img/Geo.png);
+  background-image: url(../img/Geo.png);
 }
 
 .DendroVision {
-  background-image: url(img/Dendro.png);
+  background-image: url(../img/Dendro.png);
 }
 
 .dePad {
@@ -147,7 +191,6 @@ body {
 #GenshinCard {
   width: 670px;
   margin: 0 auto;
-  margin-top: 20px;
   border-radius: 20px;
   text-align: center;
   padding: 20px;
@@ -250,7 +293,7 @@ body {
 }
 
 .cardBG {
-  background-image: url('img/cardBG_3.jpg');
+  background-image: url('../img/cardBG_3.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
