--- a/CardsPlus/style.css
+++ b/CardsPlus/style.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background-image: url(img/bg.jpg);
+  background-image: url(../img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -293,7 +293,7 @@ body {
 }
 
 .cardBG {
-  background-image: url('img/cardBG_3.jpg');
+  background-image: url('../img/cardBG_3.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
