--- a/CheckList/style.css
+++ b/CheckList/style.css
@@ -1,5 +1,11 @@
+@font-face {
+  font-family: Skip;
+  src: url(../res/Skip.woff);
+}
+
 * {
   font-family: Lato;
+  font-size: 12px;
 }
 
 [type="checkbox"].reset-checkbox,
@@ -191,9 +197,13 @@ body {
 #GenshinCard {
   width: 670px;
   margin: 0 auto;
-  border-radius: 20px;
+  border-radius: 10px;
   text-align: center;
   padding: 20px;
+}
+
+#GenshinCard * {
+  font-family: Skip !important;
 }
 
 .card_headerImage img {
@@ -243,8 +253,8 @@ body {
 }
 
 .cardInfo {
-  padding: 20px;
-  border-radius: 20px;
+  padding: 10px;
+  border-radius: 10px;
   margin-top: 20px;
   vertical-align: top;
   width: calc(100% - 680px);
@@ -271,9 +281,11 @@ body {
   background-color: #44a3cf;
   border-radius: 5px;
   padding: 5px;
-  font-size: 16px;
   cursor: pointer;
   float: right;
+  font-weight: bold;
+  font-size: 12px;
+  color: white;
 }
 
 .button:hover {
