--- a/CheckList/style.css
+++ b/CheckList/style.css
@@ -196,6 +196,7 @@ body {
 
 #GenshinCard {
   width: 670px;
+  max-width: 100%;
   margin: 0 auto;
   border-radius: 10px;
   text-align: center;
@@ -229,11 +230,12 @@ body {
   border-bottom: 2px solid RGBA(0, 0, 0, .5);
   border-top: 2px solid RGBA(255, 255, 255, .5);
   border-radius: 5px;
-  margin: 2px;
+  margin: 2px auto;
   background-repeat: no-repeat;
   background-size: 30px;
   line-height: 0;
   overflow: hidden;
+  max-width: 100px;
 }
 
 .characters input.filter {
@@ -350,5 +352,57 @@ body {
   .marquee span {
     animation: none;
     padding-left: 0;
+  }
+}
+
+.showInCustom-700 {
+  display: none;
+}
+
+.hideInCustom-700 {
+  display: inline-block;
+}
+
+.card_labelSmall {
+  width: 100% !important;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
+
+@media only screen and (max-width: 700px) {
+  .showInCustom-700 {
+    display: inline-block;
+  }
+
+  .hideInCustom-700 {
+    display: none;
+  }
+
+  .card_headerImage,
+  .card_userDetails {
+    width: 50% !important;
+  }
+}
+
+@media only screen and (max-width: 1370px) {
+  .cardInfo {
+    width: 100%;
+  }
+
+  .container {
+    text-align: center;
   }
 }
